--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -47,7 +47,7 @@
   
    h1{ 
     align-items: left;
-    width: 20%;  
+    width: 40%;  
     }
   }
 
